<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainFragmentContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/mainFragmentLayoutNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp">

        <TextView
                android:id="@+id/mainFragmentLabelTo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/large_padding"
                android:paddingEnd="30dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/to"/>

        <EditText
                android:id="@+id/mainFragmentNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/mainFragmentLabelTo"
                android:paddingStart="@dimen/large_padding"
                android:paddingEnd="@dimen/large_padding"
                android:background="@color/colorTransparent"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:hint="@string/main_fragment_hint_phone_number"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorLightGray"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainFragmentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="@dimen/regular_padding"
            android:paddingEnd="@dimen/regular_padding"
            android:clipToPadding="true"
            android:orientation="vertical"
            android:background="@color/colorLightGray"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_message"/>

    <LinearLayout
            android:id="@+id/mainFragmentLayoutMessage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/mainFragmentEditTextMessage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/regular_padding"
                android:background="@color/colorTransparent"
                android:inputType="textCapSentences"
                android:hint="@string/main_fragment_hint_type_message"/>

        <ImageButton
                android:id="@+id/mainFragmentButtonSend"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/large_padding"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:tint="@color/colorDarkGray"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/content_description_button_send"
                android:src="@drawable/ic_send"/>

    </LinearLayout>

</LinearLayout>
