<resources>

    <string name="app_name">CodeTest - EE</string>
    <string name="to">To</string>
    <string name="ok">OK</string>
    <string name="generic_network_error">There was a network error!</string>
    <string name="main_fragment_inactive_alert_title">Equal Experts</string>
    <string name="main_fragment_inactive_alert_message">Hey! Looks like you\'ve missed a reply!</string>
    <string name="main_fragment_hint_phone_number">Enter phone number</string>
    <string name="main_fragment_hint_type_message">Type your message</string>
    <string name="validation_number_error_empty">This field is required!</string>
    <string name="validation_number_error_less_than_10_chars">This is not a valid phone number!</string>
    <string name="content_description_button_send">Send</string>

</resources>
